# Qantara

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BACKEND_ADAPTER_TARGETS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  HANDOFF.md  HANDOFF_EXPLORE.md  LICENSE  MILESTONES.md  Makefile  PLAN.md  PROJECT_STATE.md  README.md  REAL_BACKEND_INTEGRATION.md  RESEARCH.md  ROADMAP.md  SECURITY.md  SESSION_GATEWAY_CONTRACT.md  VERSION  cli.py  config.py  docker-compose.yml  pyproject.toml  qantara.example.yml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
adapters/: CONTRACT.md  README.md  base.py  factory.py  mock_adapter.py  openai_compatible.py  runtime_skeleton.py  session_gateway_http.py
client/: README.md
discovery/: __init__.py  scanner.py
docs/: BENCHMARKS.md  CONFIGURATION.md  DEMO.md  DEVELOPER_ONBOARDING.md  FIRST_PUBLIC_RELEASE_NOTES_DRAFT.md  HOMEASSISTANT.md  INSTALLATION_AND_FIRST_RUN_GUIDE.md  MESH.md  PUBLISHING_READINESS_AUDIT.md  README.md  RELEASE_CHECKLIST.md  REPOSITORY_CLEANUP_REPORT.md  SECURITY_PUBLICATION_AUDIT.md  SESSION_HANDOFF.md  SUPPLY_CHAIN.md  TROUBLESHOOTING.md
experiments/: README.md  RUN_TRANSPORT_SPIKE.md  TRANSPORT_SPIKE.md  measure_tts_latency.py  test_vad_simulation.py
gateway/: README.md  SESSION_MODEL.md  session_backend_prompts.py
identity/: AVATAR_SYSTEM.md  LIPSYNC_CONTRACT.md  README.md  VOICE_SYSTEM.md  avatar-descriptor.schema.json  voice-registry.schema.json
ops/: Caddyfile  README.md  TRUST_CERT_WINDOWS.md  (+2 more)
(+114 files in other folders)
